# CommandFuncHandler-MCDR

./: .gitignore  README.md  README_en_US.md  check.sh  gitrepo.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc/: CHANGELOG.md  RELEASE.md  introduction_en_us.md  introduction_zh_cn.md
src/: mcdreforged.plugin.json
src/command_func_handler/: __init__.py  config.py  mixin.py
