[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "command-func-handler"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["mcdreforged>=2.15.7"]

[dependency-groups]
dev = ["ruff>=0.15.12", "ty>=0.0.33"]

[tool.hatch.version]
source = "regex"
path = "src/mcdreforged.plugin.json"
pattern = '"version"\s*:\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/command_func_handler"]
